poll.deployment.yaml
#poll:
#• Based on epitechcontent/t-dop-600-poll:k8s.
#• Namespace: default.
#• Replicated: once (== 2 instances).
#• Always restarts.
#• Memory limit of 128M.
#• Exposes port 80.
#• Has a Traefik rule matching poll.dop.io host and proxying to poll service.
#• Environment variables:
#• REDIS_HOST -> because of:: -> ->


#- Poll, a Flask Python web application
#that gathers votes and push them into a Redis queue

apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll-deploy
  namespace: default  
  labels:
    app: poll
    stage: terrible

spec:
  replicas: 2
  selector:
    matchLabels:
      app: poll
      stage: terrible  
  template:
    metadata:
      labels:
        app: poll
        stage: terrible  
    spec:
      restartPolicy: Always
      containers:
        - name: poll-container
          image: epitechcontent/t-dop-600-poll:k8s
            ##'.spec.template.spec.containers[0].ports[0].containerPort' is missing
          ports:
          - containerPort: 80
            #.spec.template.spec.containers[0].resources.limits.memory' is missing  
          resources:
            limits:
              memory: "128Mi"
