postgres.deployment.yaml
#postgres:
#• Based on postgres:12.
#• Namespace: default.
#• Not replicated.
#• Always restarts.
#• Exposes port 5432.
#• Is not enabled in Traefik.
#• Has a persistent volume: /var/lib/postgresql/data.
#• Environment variables:
#• POSTGRES_HOST -> stored in configmap
#• POSTGRES_PORT -> stored in configmap
#• POSTGRES_DB  -> stored in connfigmap
#• POSTGRES_USER -> stored in secret
#• POSTGRES_PASSWORD -> stored in secret
#


apiVersion: apps/v1  ## once again.. what does this version mean?
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: default  
    

  labels: # the label for that actual deployment
    app: postgres  ### ???
    stage: dev   ### just to see what is what

spec:
  replicas: 1
  selector:
    matchLabels:   ## tells what PODS the deployment will apply to
      app: postgres-db
      stage: development
  template: #podTemplate
    metadata:
      labels: #those are the labels of the pod, which u will use for
              #exposing the pod by service
        app: postgres-db
        stage: development
    spec:
      restartPolicy: Always
      volumes:
        - name: postgres-volume
          persistentVolumeClaim:
            claimName: postgres-pers-volume-claim
      containers:
        - name: postgres
          image: postgres:12
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-volume
