result.deployment.yaml
#result:
#• Based on epitechcontent/t-dop-600-result:k8s.
#• Namespace: default.
#• Replicated: once (== 2 instances).
#• Memory limit of 128M.
#• Always restarts.
#• Exposes port 80.
#• Has a Traefik rule matching result.dop.io host and proxying to result service.
#• Environment variables:
#• POSTGRES_HOST
#• POSTGRES_PORT
#• POSTGRES_DB
#• POSTGRES_USER
#• POSTGRES_PASSWORD


apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-deploy
  namespace: default
  labels:
    app: result
    stage: dead

spec:
  replicas: 2
  selector:
    matchLabels:
      app: result
      stage: dead
        ### in which way can deployment and pod labels differ??
                  ## what labels is a service looking for?
  template:
    metadata:
      labels:
        app: result
        stage: dead
    spec:
      restartPolicy: Always
      containers:
        - name: result-container
          image: epitechcontent/t-dop-600-result:k8s
          ports:
            - containerPort: 80
              #result.deployment.yaml - resources: KO   
          resources:
            limits:
              memory: "128Mi"   ## does it work jus like this?
