result.service.yaml
## the service has to be exposed externally.. so it goes to ingress first ..
apiVersion: v1
kind: Service
metadata:
  labels:
    service: result
  name: result-service
  namespace: default
spec:
    selector:
      app: result
      stage: dead
    type: ClusterIP
    ports:
      - protocol: TCP
        port: 80 ##for simplicity
        targetPort: 80
          ## nodePort range: 30 000 <-> 32 000+  
          ##nodePort: 30021
