poll.ingress.yaml
## Has a Traefik rule matching poll.dop.io host and proxying to poll service.

## use networking.k8s.io/v1 Ingress

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poll-ingress
  namespace: default  
spec:
  rules:
  - host: poll.dop.io
    http:
      paths:
        - path: '/'
          pathType: Prefix
          backend:
            service:
              name: poll-service
              port:
                number: 80  
  #tls:
  # - hosts:
  #  - poll.dop.io
  #  secretName: poll-secret-tls  

      
# wrong value for '.spec.rules[0].http.paths | length'
